dist/manyfold/Deployment.manyfold.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: manyfold
  name: manyfold
  namespace: manyfold
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: manyfold-manyfold-deployment-c89edba1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: manyfold
        cdk8s.io/metadata.addr: manyfold-manyfold-deployment-c89edba1
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: DATABASE_ADAPTER
              value: postgresql
            - name: DATABASE_HOST
              value: prod.postgres.svc.cluster.local
            - name: DATABASE_PORT
              value: "5432"
            - name: DATABASE_NAME
              value: manyfold
            - name: DATABASE_USER
              value: manyfold
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: manyfold-db-credentials
            - name: REDIS_URL
              value: redis://manyfold-valkey-master:6379/1
            - name: PUID
              value: "1006"
            - name: PGID
              value: "1004"
            - name: SECRET_KEY_BASE
              valueFrom:
                secretKeyRef:
                  key: SECRET_KEY_BASE
                  name: manyfold-secrets
          image: ghcr.io/manyfold3d/manyfold
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3214
              scheme: HTTP
          name: manyfold
          ports:
            - containerPort: 3214
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3214
              scheme: HTTP
          resources:
            limits:
              cpu: "4"
              memory: 2048Mi
            requests:
              cpu: "1"
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /models
              name: pvc-nfs-3dprinting
              subPath: STLs
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-nfs-3dprinting
          persistentVolumeClaim:
            claimName: nfs-3dprinting
            readOnly: false
