dist/manyfold/Service.manyfold-valkey-master.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: manyfold
    app.kubernetes.io/name: valkey
  name: manyfold-valkey-master
  namespace: manyfold
spec:
  ports:
    - name: tcp-valkey
      port: 6379
      targetPort: valkey
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: manyfold
    app.kubernetes.io/name: valkey
  type: ClusterIP
