dist/manyfold/Service.manyfold.yaml
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: manyfold
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3214
      targetPort: 3214
  selector:
    cdk8s.io/metadata.addr: manyfold-manyfold-deployment-c89edba1
  type: ClusterIP
